--- a/main.css
+++ b/main.css
@@ -1,22 +1,125 @@
-.button-container {
+body{
+    background-color: #eee;
+  }
+  
+  .container{
+    width: 500px;
+    height: 300px;
+    margin:25vh auto;
+    border-radius: 25px;
+    box-shadow: 0 20px 40px 0px rgba(0,0,0,0.3)
+  }
+  
+  .header {
+    height: 20%;
+    background-color: rgb(139, 156, 233);
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
     text-align: center;
-}
+    position:relative;
+  }
+  
+  #temp, #humidity-div {
+    font-family: "Courier New";
+    font-weight: bold;
+    font-size: 60px;
+    color: #fff;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  #hum {
+      text-align: center;
+margin: 5px;
+  }
+  #temper {
+      text-align: center;
+      margin: 5px;
+  }
+  .city-icon-holder {
+    position:absolute;
+    left: 25%;
+    top: 40%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  #city-name {
+    font-family: "Courier New";
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff;
+  }
+  
+  #icon {
+    width:50%;
+  }
+  
+  #main{
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  
+  .city-icon {
+    height: 80%;
+    width: 50%;
+    border-bottom-left-radius: 25px;
+    background-color: rgb(57, 58, 131);
+   
+  }
+  
+  .temperature {
+    position: absolute;
+    left: 50%;
+    top:0%;
+    height: 40%;
+    width: 50%;
+    background-color: rgb(164, 226, 223);
+   
+  }
+ #descript {
+    font-family: "Courier New";
 
-.button-container > button {
-    margin: 0;
-    padding: 10px 18px;
-    color: white;
-    background-color: #008000;
-    border: none;
-    border-radius: 3px;
-    transition: all 200ms ease-in-out;
-    font-size: 14px;
-}
-
-.button-container > button:hover {
-    background-color: #00A000;
-}
-
-.button-container > button:active {
-    background-color: #006000;
-}
+     color: lightcyan;
+     font-style: italic;
+ }
+  
+  .humidity {
+    height: 40%;
+    width: 50%;
+    position:absolute;
+    left:50%;
+    top:40%;
+    border-bottom-right-radius: 25px;
+    background-color: lightseagreen;
+    
+  }
+  
+  #search-btn {
+    width: 40px;
+    height:40px;
+    color: #eee;
+  }
+  
+  #search-txt {
+    color: red;
+    height:30px;
+    border-radius: 10px;
+    border-style:none;
+    outline:none;
+    padding-right:1px;
+    padding-left:1px;
+    text-align:center;
+  }
+  
+  .search {
+    position: absolute;
+    left: 50%;
+    top:50%;
+    -webkit-transform:translate(-50%,-50%);
+            transform:translate(-50%,-50%);
+  }
